--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "immutable": "^3.8.2",
     "lorem-ipsum": "^1.0.4",
     "mongoose": "^5.1.1",
