--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "patrick-sachs.de",
+  "name": "helios",
   "version": "1.0.0",
-  "description": "Website patrick-sachs.de",
+  "description": "Helios CMS",
   "main": "index.js",
   "author": "Patrick Sachs",
   "license": "MIT",
@@ -10,19 +10,14 @@
     "start": "node ./src/server",
     "build": "next build src"
   },
-  "devDependencies": {
-    "webpack": "^4.8.3"
-  },
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "immutable": "^3.8.2",
-    "lorem-ipsum": "^1.0.4",
     "mongoose": "^5.1.1",
     "next": "^6.0.3",
-    "path-match": "^1.2.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-tooltip": "^3.6.0",
