--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "uglifyjs-webpack-plugin": "^1.2.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@zeit/next-sass": "^0.2.0",
     "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
