Fixed VS Code excluded files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "editor.tabSize": 2,
     "files.exclude": {
         "node_modules/": true,
-        ".next/": true,
+        "src/.next/": true,
         ".vscode/": true,
         ".gitignore": true
     },
