--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "glob": "^7.1.2",
+    "greenlock-express": "^2.1.6",
     "immutable": "^3.8.2",
     "mongoose": "^5.1.1",
     "next": "^6.0.3",
