--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "glob": "^7.1.2",
     "greenlock-express": "^2.1.6",
     "immutable": "^3.8.2",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.0.0",
     "mongoose": "^5.1.1",
     "next": "^6.0.3",
     "node-sass": "^4.9.0",
@@ -37,7 +39,9 @@
     "postcss-loader": "^2.1.5",
     "raw-loader": "^0.5.1",
     "react": "^16.3.2",
+    "react-addons-text-content": "0.0.4",
     "react-dom": "^16.3.2",
+    "react-intl": "^2.4.0",
     "react-tooltip": "^3.6.0",
     "slate": "^0.33.6",
     "slate-react": "^0.12.6",
