--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bulma": "^0.7.1",
     "classnames": "^2.2.5",
     "compression": "^1.7.2",
+    "deep-equal": "^1.0.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
