--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mdi-react": "^3.4.0",
     "mongoose": "^5.1.1",
     "next": "^6.0.3",
+    "next-routes": "^1.4.2",
     "node-sass": "^4.9.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.1.5",
