--- a/package.json
+++ b/package.json
@@ -25,13 +25,9 @@
     "babel-plugin-wrap-in-js": "^1.1.1",
     "bulma": "^0.7.1",
     "classnames": "^2.2.6",
-    "compression": "^1.7.3",
     "deep-equal": "^1.0.1",
     "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
     "glob": "^7.1.2",
-    "greenlock-express": "^2.3.2",
     "immutable": "^3.8.2",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
@@ -49,10 +45,10 @@
     "react-dom": "^16.4.1",
     "react-intl": "^2.4.0",
     "react-tooltip": "^3.6.1",
+    "redoubt": "^1.0.2",
     "slate": "^0.33.8",
     "slate-paste-linkify": "^0.5.1",
     "slate-react": "^0.12.11",
-    "slate-soft-break": "^0.6.1",
-    "spdy": "^3.4.7"
+    "slate-soft-break": "^0.6.1"
   }
 }
