--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ node_modules
 # Ignore compiled Next App
 .next
 # Ignore certs
-src/config/**
+src/config/**/
+src/config/client.js
+src/config/server.js
