--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "immutable": "^3.8.2",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
+    "jodit-react": "^1.0.17",
     "js-sha1": "^0.6.0",
     "mdi-react": "^4.4.0",
     "mongoose": "^5.3.10",
@@ -44,10 +45,6 @@
     "react-dom": "^16.6.1",
     "react-intl": "^2.7.2",
     "react-tooltip": "^3.9.0",
-    "redoubt": "^1.1.0",
-    "slate": "^0.44.2",
-    "slate-paste-linkify": "^0.7.0",
-    "slate-react": "^0.21.8",
-    "slate-soft-break": "^0.9.0"
+    "redoubt": "^1.1.0"
   }
 }
