--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-formilicious/core": "^1.0.3",
     "@react-formilicious/validator-pwned": "^1.0.0",
     "@zeit/next-sass": "^1.0.1",
+    "ace-builds": "^1.4.2",
     "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
@@ -31,6 +32,7 @@
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
     "jodit-react": "^1.0.17",
+    "js-beautify": "^1.8.8",
     "mdi-react": "^5.0.0",
     "mongoose": "^5.3.10",
     "next": "^7.0.2",
