--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules
 # Ignore compiled Next App
 .build/
 # Ignore certs
-src/config/**/
-src/config/style.sass
-src/config/client.js
-src/config/server.js
+config/**/
+config/style.sass
+config/client.js
+config/server.js
