--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Installed dependencies
 node_modules
 # Ignore compiled Next App
-.build/
+.next/**
 # Ignore certs
 config/**/
 config/style.sass
