--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.6.1",
     "react-intl": "^2.7.2",
     "react-tooltip": "^3.9.0",
-    "redoubt": "^1.1.0"
+    "redoubt": "^1.1.0",
+    "web-push": "^3.3.3"
   }
 }
