--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-intl": "^2.7.2",
     "react-tooltip": "^3.9.0",
     "redoubt": "^1.1.0",
+    "striptags": "^3.1.1",
     "useragent": "^2.3.0",
     "web-push": "^3.3.3"
   }
