--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Patrick Sachs",
   "license": "MIT",
   "scripts": {
-    "dev": "node ./server",
+    "dev": "node --inspect ./server",
     "start": "cross-env NODE_ENV=production node ./server",
     "build": "cross-env NODE_ENV=production next build"
   },
@@ -27,12 +27,15 @@
     "classnames": "^2.2.6",
     "deep-equal": "^1.0.1",
     "dotenv": "^6.1.0",
+    "express-form-data": "^2.0.7",
+    "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "immutable": "^3.8.2",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "jodit-react": "^1.0.17",
+    "jodit": "file:../../jodit",
     "js-beautify": "^1.8.8",
+    "lorem-ipsum": "^1.0.6",
     "mdi-react": "^5.0.0",
     "mongoose": "^5.3.10",
     "next": "^7.0.2",
