--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "immutable": "^3.8.2",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "jodit": "file:../../jodit",
+    "jodit": "github:PatrickSachs/jodit#feature/relative-paths",
     "js-beautify": "^1.8.8",
-    "lorem-ipsum": "^1.0.6",
     "mdi-react": "^5.0.0",
     "mongoose": "^5.3.10",
     "next": "^7.0.2",
