--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "author": "Patrick Sachs",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PatrickSachs/helios.git"
+  },
   "scripts": {
+    "docker": "npm run build && docker build . --tag patrick.sachs/helios && docker save patrick.sachs/helios > helios.tar",
     "dev": "node --inspect ./server",
     "start": "cross-env NODE_ENV=production node ./server",
     "build": "cross-env NODE_ENV=production next build"
