--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "cross-env NODE_ENV=production next build"
   },
   "devDependencies": {
-    "@types/react-intl": "^2.3.14",
+    "@types/react-intl": "^2.3.15",
     "cross-env": "^5.2.0"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
     "@zeit/next-sass": "^1.0.1",
     "ace-builds": "^1.4.2",
     "axios": "^0.18.0",
-    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-module-resolver": "^3.1.2",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "bulma": "^0.7.2",
     "classnames": "^2.2.6",
@@ -38,12 +38,12 @@
     "immutable": "^3.8.2",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "jodit": "github:PatrickSachs/jodit#feature/relative-paths",
+    "jodit": "^3.2.34",
     "js-beautify": "^1.8.9",
-    "mdi-react": "^5.1.0",
-    "mongoose": "^5.4.0",
+    "mdi-react": "^5.2.0",
+    "mongoose": "^5.4.4",
     "next": "^7.0.2",
-    "next-offline": "^3.3.1",
+    "next-offline": "^3.3.4",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "postcss-easy-import": "^3.0.0",
@@ -51,8 +51,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-intl": "^2.7.2",
-    "react-tooltip": "^3.9.0",
+    "react-intl": "^2.8.0",
     "redoubt": "^1.1.0",
     "striptags": "^3.1.1",
     "useragent": "^2.3.0",
