Use fileIsAbsolute to allow inserting images in folders - xdan/jodit#128

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "immutable": "^3.8.2",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "jodit": "^3.2.34",
+    "jodit": "github:PatrickSachs/jodit#feature/relative-paths-2",
     "js-beautify": "^1.8.9",
     "mdi-react": "^5.2.0",
     "mongoose": "^5.4.4",
