--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.3.1",
-    "@react-formilicious/bulma": "^2.0.0",
-    "@react-formilicious/core": "^2.0.0",
+    "@react-formilicious/bulma": "^2.0.1",
+    "@react-formilicious/core": "^2.0.1",
     "@zeit/next-sass": "^1.0.1",
     "ace-builds": "^1.4.2",
     "axios": "^0.18.0",
@@ -33,6 +33,7 @@
     "classnames": "^2.2.6",
     "deep-equal": "^1.0.1",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "express-form-data": "^2.0.7",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
@@ -54,9 +55,10 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-intl": "^2.8.0",
-    "redoubt": "^1.1.0",
+    "redoubt": "file:../../redoubt/git/dist",
     "striptags": "^3.1.1",
     "useragent": "^2.3.0",
-    "web-push": "^3.3.3"
+    "web-push": "^3.3.3",
+    "winston": "^3.2.1"
   }
 }
