--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "cross-env": "^5.2.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.3.4",
     "@react-formilicious/bulma": "^2.0.1",
     "@react-formilicious/core": "^2.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "ace-builds": "^1.4.2",
+    "ace-builds": "^1.4.3",
     "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.2",
     "babel-plugin-wrap-in-js": "^1.1.1",
@@ -41,21 +41,21 @@
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
     "jodit": "github:PatrickSachs/jodit#feature/relative-paths-2",
-    "js-beautify": "^1.8.9",
+    "js-beautify": "^1.9.0",
     "js-sha1": "^0.6.0",
     "mdi-react": "^5.2.0",
-    "mongoose": "^5.4.4",
-    "next": "^7.0.2",
-    "next-offline": "^3.3.4",
+    "mongoose": "^5.4.16",
+    "next": "^8.0.3",
+    "next-offline": "^3.3.6",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-intl": "^2.8.0",
-    "redoubt": "^2.0.1",
+    "redoubt": "file:../../redoubt/git/dist",
     "striptags": "^3.1.1",
     "useragent": "^2.3.0",
     "web-push": "^3.3.3",
