Make NODE_ENV configurable in .env file

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+ENV=production
+
 # The database URIs. Contains authentication.
 # See https://mongoosejs.com/docs/connections.html#connections for details.
 DB="mongodb://localhost/helios"
