--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-ENV=production
-
-# The database URIs. Contains authentication.
-# See https://mongoosejs.com/docs/connections.html#connections for details.
+# The URI to your database. If you have installed MongoDB on the same machine and are 
+# using the default installation on of MongoDB you can leave this at its default.
+# Otherwise see https://docs.mongodb.com/manual/reference/connection-string/ for details.
 DB="mongodb://localhost/helios"
 DB_OPTS="{"useNewUrlParser": true}"
 
@@ -17,9 +16,20 @@ BIND_IP="0.0.0.0"
 # Helios will only issue a certificate valid for these domains.
 BIND_DOMAINS="localhost"
 
+# Do you want HTTPS support? Valid values are:
+#   * none - No SSL
+#   * letsEncrypt - Free SSL certificates by Let's Encrypt. Make sure that your 
+#     BIND_DOMAINS are correct and pointing to this server. (In this case also
+#     set AGREE_GREENLOCK_TOS to true)
+#   * certificate - Manually issued certificates (not implemented yet)
 SSL="none"
 AGREE_GREENLOCK_TOS=false
 
+# Your webmaster mail. Required by Let's Encrypt and Web Push service.
 MAIL="webmaster@localhost.local"
 
 # TODO: Some sort of canonical port for NAT?
+
+# Leave this at its default value unless you want to join in on developing Helios.
+# Enables developer mode if set to development.
+ENV=production
