Implemented experimental BIND_IP option

--- a/.env
+++ b/.env
@@ -9,7 +9,8 @@ DB_OPTS="{"useNewUrlParser": true}"
 PORT_HTTP=80
 PORT_HTTPS=443
 
-# CURRENTLY NOT USED! - https://git.coolaj86.com/coolaj86/greenlock-express.js/issues/26
+# The IP Helios will bind to. Set to [::] for IPv6. You'll know when you need any 
+# other value.
 BIND_IP="0.0.0.0"
 
 # Host on these domains. The first domain will be your primary, canonical URL.
