--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-intl": "^2.8.0",
-    "redoubt": "^2.0.1",
+    "redoubt": "^2.0.2-rc1",
     "striptags": "^3.1.1",
     "useragent": "^2.3.0",
     "web-push": "^3.3.3",
