--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-intl": "^2.8.0",
     "redoubt": "^2.0.2-rc1",
     "striptags": "^3.1.1",
+    "truncate-html": "^1.0.1",
     "useragent": "^2.3.0",
     "web-push": "^3.3.3",
     "winston": "^3.2.1"
