Automcatially upload /static/content/system files

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "js-beautify": "^1.9.0",
     "js-sha1": "^0.6.0",
     "mdi-react": "^5.2.0",
+    "mime": "^2.4.0",
     "mongoose": "^5.4.16",
     "next": "^8.0.3",
     "next-offline": "^3.3.6",
