Can now use manually issued certificates

--- a/.env
+++ b/.env
@@ -18,12 +18,16 @@ BIND_IP="0.0.0.0"
 BIND_DOMAINS="localhost"
 
 # Do you want HTTPS support? Valid values are:
-#   * none - No SSL
+#   * none - No SSL, not recommended.
 #   * letsEncrypt - Free SSL certificates by Let's Encrypt. Make sure that your 
 #     BIND_DOMAINS are correct and pointing to this server. (In this case also
 #     set AGREE_GREENLOCK_TOS to true)
-#   * certificate - Manually issued certificates (not implemented yet)
+#   * certificate - Manually issued certificates. (When using mode make sure to
+#     also adjust SSL_CERT and SSL_KEY to their paths and set BIND_DOMAINS to 
+#     the domains the certificate was issued to.)
 SSL="none"
+SSL_CERT=""
+SSL_KEY=""
 AGREE_GREENLOCK_TOS=false
 
 # Your webmaster mail. Required by Let's Encrypt and Web Push service.
