Added demo ssl parts to config

--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ BIND_DOMAINS="localhost"
 #     also adjust SSL_CERT and SSL_KEY to their paths and set BIND_DOMAINS to 
 #     the domains the certificate was issued to.)
 SSL="none"
-SSL_CERT=""
-SSL_KEY=""
+SSL_CERT="config/ssl-cert.pem"
+SSL_KEY="config/ssl-key.pem"
 AGREE_GREENLOCK_TOS=false
 
 # Your webmaster mail. Required by Let's Encrypt and Web Push service.
