Added EXPOSED_PORT option

--- a/.env
+++ b/.env
@@ -33,7 +33,10 @@ AGREE_GREENLOCK_TOS=false
 # Your webmaster mail. Required by Let's Encrypt and Web Push service.
 MAIL="webmaster@localhost.local"
 
-# TODO: Some sort of canonical port for NAT?
+# If your website is not publically reachable over the port it has been bound to
+# set a value here. This happens in case of NAT. You can leave this empty in 
+# almost all cases though.
+EXPOSED_PORT=
 
 # Leave this at its default value unless you want to join in on developing Helios.
 # Enables developer mode if set to development.
