Add the option to specify CA for custom certs

--- a/.env
+++ b/.env
@@ -28,6 +28,7 @@ BIND_DOMAINS="localhost"
 SSL="none"
 SSL_CERT="config/ssl-cert.pem"
 SSL_KEY="config/ssl-key.pem"
+SSL_CA=""
 AGREE_GREENLOCK_TOS=false
 
 # Your webmaster mail. Required by Let's Encrypt and Web Push service.
